--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@angular/core": "2.2.1",
     "@angular/forms": "2.2.1",
     "@angular/http": "2.2.1",
+    "@angular/material": "^2.0.0-alpha.10",
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/router": "3.2.1",
+    "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
